--- a/packages/web/src/tailwind.css
+++ b/packages/web/src/tailwind.css
@@ -28,6 +28,8 @@
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 210 40% 98%;
 
+    --warning: 24.6 95% 53.1%;
+
     --border: 262.53deg 16.12% 95.03% / 70%;
     --input: 214.3 31.8% 91.4%;
     --ring: 222.2 84% 4.9%;
